--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -1,26 +1,39 @@
+
+:root{
+    --azul-escuro: #1c3144;
+    --cinza-escuro: #C4CAD0;
+    --cinza: #D9D9D9;
+    --branco: #fcf7ff;
+}
+*{
+    font-family: 'Jost', sans-serif;
+}
 body, html {
+    background-color: var(--branco);
     margin: 0;
     padding: 0;
 }
-
+h1, h2, p, a{
+    color: var(--azul-escuro);
+}
 .wrapper {
     display: flex;
 }
 
 .content {
     flex: 1;
-    padding: 20px;
+    padding: 20px 48px;
 }
 
 .sidebar {
+    padding: 20px;
     width: 200px;
     position: fixed;
     top: 0;
     right: 0;
     height: 100%;
-    background-color: #333;
-    color: #fff;
-    padding-top: 20px;
+    background-color: var(--cinza-escuro);
+    color: var(--azul-escuro);
     display: flex;
     flex-direction: column;
 }
@@ -35,23 +48,61 @@ body, html {
 
 .sidebar a {
     text-decoration: none;
-    color: #fff;
     display: block;
     transition: background-color 0.3s;
 }
 
-.sidebar a:hover {
-    background-color: #555;
-}
+
 
 .azul{
     width: 24px;
     height: 24px;
     border-radius: 5px;
-    background: #1C3144;
+    background: var(--azul-escuro);
+}
+.cinza{
+    width: 24px;
+    height: 24px;
+    border-radius: 5px;
+    background: var(--cinza-escuro);
 }
 .bottom-element {
     margin-top: auto; /* Empurra o elemento para o final da barra lateral */
     padding: 10px;
-    background-color: #444;
+}
+.logo{
+    width: 48px;
+    height: 48px;
+}
+.titulo{
+    display: flex;
+    justify-content: center;
+    gap: 700px;
+    flex-direction: row;
+}
+.container-principal{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+.content2{
+    padding: 64px 0px;
+}
+.content2 p{
+    margin: -16px 0px;
+}
+.azul, .cinza, h3{
+    display: inline-block;
+}
+.content3{
+    display: flex;
+    flex-direction: row;
+    gap: 48px;
+}
+
+.pag-ativo{
+    background-color: var(--cinza);
+    border-radius: 5px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+   
 }
