--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -113,7 +113,7 @@ p{
 }
 .menu-usuario{
     margin-top: auto; 
-    padding: 10px;
+    padding-bottom: 20px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -124,6 +124,7 @@ p{
 
 
 /* CSS DA TABELA */
+
 table {
     width: 100%;
     border-collapse: collapse;
@@ -131,15 +132,18 @@ table {
 }
 
 th, td {
-    border: 1px solid #ddd;
+    border-bottom: 1px solid var(--azul-escuro);
     padding: 8px;
     text-align: left;
 }
 
 th {
-    background-color: #f2f2f2;
+    background-color: var(--cinza);
 }
 
 #filtroSelect {
     margin-bottom: 10px;
+    border-radius: 5px;
+    text-align: center;
+    background-color: transparent;
 }
