--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -12,7 +12,7 @@
 body{
     background-color: var(--branco);
     margin: 0;
-    margin-left: 18%;
+    margin-left: 230px;
     padding: 0;
 }
 h1{
@@ -28,6 +28,13 @@ p{
 
 
 /* CONTAINERS */
+.container-principal{
+    width: 100%;
+    
+}
+#chart_div {
+    box-sizing: border-box;
+}
 .container {
     display: flex;
 }
